Fix gap

--- a/public/css/components/_sticky-header.css
+++ b/public/css/components/_sticky-header.css
@@ -9,7 +9,7 @@
 .sticky-page-header::before {
     content: "";
     position: absolute;
-    top: -1rem; /* match page container padding */
+    top: -1.25rem; /* match page container padding */
     bottom: 0;
     left: -1rem;
     right: -1rem;
@@ -23,6 +23,7 @@
 .sidebar .sticky-page-header::before {
     background: rgba(255, 255, 255, 0.825);
 }
+
 
 .sticky-page-header hr {
     margin-top: 0.5rem;
